--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 TWILIO_ACCOUNT_SID=your_account_sid
 TWILIO_AUTH_TOKEN=your_auth_token
 TWILIO_FROM_NUMBER=your_twilio_number
+TWILIO_TWIML_BIN_URL=your_twiml_bin_url
+
+# TWILIO_ACCOUNT_SID=your_account_sid
+# TWILIO_AUTH_TOKEN=your_auth_token
+# TWILIO_FROM_NUMBER=your_twilio_number
